making home page show first 3 posts

--- a/_includes/themes/dave/default.html
+++ b/_includes/themes/dave/default.html
@@ -29,10 +29,8 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        {% assign pages_list = site.pages %}
-        {% assign group = 'navigation' %}
-        {% include JB/pages_list %}
-        <li><a href="https://github.com/davidgtonge">Github Profile</a></li>
+        <li><a href="/archive">Archive</a></li>
+        <li><a href="https://github.com/davidgtonge">GitHub Profile</a></li>
         <li><a href="http://simplecreativity.co.uk">Consultancy</a></li>
       </ul>
     </nav>
