Added hacker news button

--- a/_includes/themes/dave/post.html
+++ b/_includes/themes/dave/post.html
@@ -2,6 +2,8 @@
 
 {{ content }}
 
+<a href="http://news.ycombinator.com/submit" class="hn-share-button">Discuss on HN</a>
+
 {% unless page.categories == empty %}
   <ul class="tag_box inline">
     <li><i class="icon-folder-open"></i></li>
