--- a/_includes/themes/dave/default.html
+++ b/_includes/themes/dave/default.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{{ ASSET_PATH }}/stylesheets/styles.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="{{ ASSET_PATH }}/javascripts/custom.js"></script>
     <script src="{{ ASSET_PATH }}/javascripts/respond.js"></script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
