--- a/assets/themes/dave/stylesheets/styles.css
+++ b/assets/themes/dave/stylesheets/styles.css
@@ -626,14 +626,17 @@ code {
   font-family: "Lucida Sans", Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   color: #efefef;
   font-size: 13px;
-  margin: 0 4px;
-  padding: 4px 6px;
+  margin: 0 2px;
+  padding: 2px 4px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   -o-border-radius: 2px;
   -ms-border-radius: 2px;
   -khtml-border-radius: 2px;
   border-radius: 2px;
+    background: #191919;
+    border: 1px solid #121212;
+
 }
 
 pre {
@@ -658,6 +661,8 @@ pre code {
   text-shadow: 0px 1px 0px #000;
   margin: 0;
   padding: 0;
+  background:none;
+  border:none;
 }
 
 table {
